as good as it gets for homework submission

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
     background-color:white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     width: 960px;
+    height: 77px;
     text-align: center;
     padding: 20px;
     margin:5px;
